# WashU6LiSim

./: .gitignore  CMakeLists.txt  CMakeListsFull.txt  CMakeListsLib.txt  Makefile  batchrun.sh  gobbi.cpp  libLi6sim.cxx  libLi6sim_rdict.pcm  rootlogon.C  sim  sim_3+  transformed_elastic.out
fitting/: Makefile  best_2peak_new.C  chi  chi.cpp  chi_multi  chi_multi.cpp  fit.cpp  fit.h  record.txt  record_grid.txt
fitting/fit7Li_ta/: Makefile  best_1peak.C  best_2peak.C  best_3peak.C  chi  chi.cpp  chi_multi  chi_multi.cpp  fit.cpp  fit.h  record_grid.txt
input/: 7li12c_e35_3+_xsec_1.out  7li12c_e35_3+_xsec_2.out  7li12c_e35_3+_xsec_3.out  7li12c_e35_3+_xsec_4.out  7li12c_e35_3+_xsec_5.out  7li12c_e35_xsec_2.out  7li12c_e35_xsec_3.out  7li12c_e35_xsec_4.out  7li12c_e35_xsec_5.out  7li12c_e42-82126_3+_xsec_1.out  7li12c_e42-82126_3+_xsec_2.out  7li12c_e42-82126_3+_xsec_3.out  7li12c_e42-82126_3+_xsec_4.out  7li12c_e42-82126_3+_xsec_5.out  7li12c_e42_3+_xsec_1.out  7li12c_e42_3+_xsec_2.out  7li12c_e42_3+_xsec_3.out  7li12c_e42_3+_xsec_4.out  7li12c_e42_3+_xsec_5.out  7li12c_e42_xsec_2.out  7li12c_e42_xsec_3.out  7li12c_e42_xsec_4.out  7li12c_e42_xsec_5.out  7li12c_e49_3+_xsec_1.out  7li12c_e49_3+_xsec_2.out  7li12c_e49_3+_xsec_3.out  7li12c_e49_3+_xsec_4.out  7li12c_e49_3+_xsec_5.out  7li12c_e49_xsec_2.out  7li12c_e49_xsec_3.out  7li12c_e49_xsec_4.out  7li12c_e49_xsec_5.out  7li12c_e56_3+_xsec_1.out  7li12c_e56_3+_xsec_2.out  7li12c_e56_3+_xsec_3.out  7li12c_e56_3+_xsec_4.out  7li12c_e56_3+_xsec_5.out  7li12c_e56_xsec_2.out  7li12c_e56_xsec_3.out  7li12c_e56_xsec_4.out  (+29 more)
loss/: ENSDF_Data2025.txt  H_in_CH2.loss  H_in_CH2.loss~  He6_in_CH2.loss  Helium_C.loss  Helium_Si.loss  Hydrogen_C.loss  Hydrogen_Si.loss  Lithium_Si.loss  NNDC_WalletCards2023.txt  SRIM_to_loss.py  SRIMtoLoss.C
loss/SRIMFiles/: Helium in Diamond.txt  Hydrogen in Diamond.txt  Lithium in Diamond.txt
plotting/: Fitspec.C  detectordist.txt  plot_dedx.C  plot_efficiencies.C~  plot_neut_kin.C  plot_rates.C  plot_resolution.C  plot_resolution.C~  plot_sim.C  plot_sim.C~  productionrate.C  productionrate.C~
src/: Gobbiarray.cpp  Gobbiarray.h  Li6sim_alphapn.cpp  Li6sim_alphapn.h  LinkDef.h  Makefile_bckup  constants.h  correlations.cpp  correlations.h  decay.cpp  decay.h  frag.cpp  frag.h  frame.cpp  frame.h  loss.cpp  loss.h  mScat.cpp  mScat.h  polyScat.cpp  polyScat.h  random.cpp  rootoutput.cpp  rootoutput.h  sim.cpp  sim_Li6_alphapn.cpp  sim_Li6_dalpha.cpp  sim_wNeut.cpp  tele.cpp  tele.h
src/old/: Makefile  Neutarray.cpp  Neutarray.h  fragment.cpp  fragneut.cpp  fragneut.h  multScat.cpp  temp.txt
